<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="14dp">

   <RelativeLayout
       android:id="@+id/profile_rl"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/avatar_iv"
           android:layout_width="45dp"
           android:layout_height="45dp"
           android:src="@drawable/room_1"/>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_toRightOf="@id/avatar_iv"
           android:layout_centerInParent="true"
           android:orientation="vertical">
           <TextView
               android:id="@+id/name_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/name"
               android:textColor="@color/colorPrimaryText"
               android:textStyle="bold"
               android:textSize="16sp"/>
           <TextView
               android:id="@+id/date_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/date"/>
       </LinearLayout>
   </RelativeLayout>

    <com.borjabravo.readmoretextview.ReadMoreTextView
        android:id="@+id/comment_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_rl"
        android:layout_marginTop="10dp"
        android:text="@string/dot_loading"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        app:trimExpandedText="@string/show_less"
        app:trimCollapsedText="@string/show_more"
        app:trimLength="100"
        app:colorClickableText="@color/colorPrimary"
        app:trimMode="trimModeLength"/>
</RelativeLayout>