<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login.LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_2"
            android:scaleType="fitCenter">
        </ImageView>

        <androidx.cardview.widget.CardView
            android:id="@+id/description_cv"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/username"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/login_btn"
                        android:onClick="Login"
                        android:width="175dp"
                        android:layout_marginTop="14dp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:text="@string/signin"
                        android:layout_height="wrap_content">
                    </Button>
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>