<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".View.RoomDetail.RoomDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"
            app:maxLines="2"
            >
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/image_vp"
                android:layout_width="460dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="-10dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:src="@drawable/transparent_bottom_to_top" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:backgroundTint="@color/colorWhite"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:paddingLeft="20dp"
                android:paddingRight="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:drawablePadding="10dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/location_cv"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map_mv"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"/>
                    <TextView
                        android:id="@+id/location_tv"
                        android:text="@string/dot_loading"
                        android:paddingLeft="9dp"
                        android:paddingRight="9dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/description_cv"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="1dp"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                        <com.borjabravo.readmoretextview.ReadMoreTextView
                            android:id="@+id/description_tv2"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/dot_loading"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:trimExpandedText="@string/show_less"
                            app:trimCollapsedText="@string/show_more"
                            app:trimLength="170"
                            app:colorClickableText="@color/colorPrimary"
                            app:trimMode="trimModeLength"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/roomLayout_cv"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="1dp"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/room_layout"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <com.borjabravo.readmoretextview.ReadMoreTextView
                        android:id="@+id/roomLayout_tv"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/dot_loading"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:trimExpandedText="@string/show_less"
                        app:trimCollapsedText="@string/show_more"
                        app:trimLength="170"
                        app:colorClickableText="@color/colorPrimary"
                        app:trimMode="trimModeLength"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/conveniences_cv"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="1dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/convenience"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/conveniences_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_star_24"
                    android:layout_marginLeft="20dp"
                    app:tint="@color/colorAccent" />
                <TextView
                    android:id="@+id/rate_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:paddingStart="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/rate_cv"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="1dp"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rate_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginBottom="10dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/showRating_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:layout_marginHorizontal="50dp"
                        android:text="@string/show_all"
                        android:textAllCaps="false"
                        android:textSize="18dp"
                        app:strokeWidth="1dp"
                        app:strokeColor="@color/colorPrimaryText"
                        app:cornerRadius="10dp"
                        android:shadowColor="@color/colorNull"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rules_cv"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/rule"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <com.borjabravo.readmoretextview.ReadMoreTextView
                        android:id="@+id/rules_tv"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:trimExpandedText="@string/show_less"
                        app:trimCollapsedText="@string/show_more_trim_line"
                        app:colorClickableText="@color/colorPrimary"
                        app:trimMode="trimModeLength"
                        app:trimLength="5"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:background="@color/colorPrimaryLight"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorBackground">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500.000"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_unit"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/booking_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="30dp"
            android:text="@string/book"
            android:textAllCaps="false"
            android:textSize="18dp"
            app:cornerRadius="10dp">

        </com.google.android.material.button.MaterialButton>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>